Fix items per page truncated

--- a/web/html/src/branding/css/uyuni/legacy-theme.less
+++ b/web/html/src/branding/css/uyuni/legacy-theme.less
@@ -611,7 +611,7 @@ header, nav.navbar-pf {
 .display-number{
   .input-sm;
   display: inline-block;
-  width: 5em;
+  width: 5.2em;
   border: 1px solid #dddddd;
   background-color: @gray-light-2;
 }
